force-app/main/default/objects/fferpcore__AccountCreditTerms__c/fferpcore__AccountCreditTerms__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__AccountCreditTermsHelp</customHelpPage>
    <description>Contains the credit terms for an account. These are used to determine the due date for billing documents sent to this account.</description>
    <label>Account Credit Terms</label>
    <nameField>
        <label>Account Credit Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Credit Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>