force-app/main/default/objects/fferpcore__AccountCreditTerms__c/fields/fferpcore__Account__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Account__c</fullName>
    <description>The account to which these credit terms belong.</description>
    <inlineHelpText>The account to which these credit terms belong.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Credit Terms</relationshipLabel>
    <relationshipName>AccountCreditTerms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>