force-app/main/default/objects/fferpcore__AccountCreditTerms__c/fields/fferpcore__BaseDate3__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BaseDate3__c</fullName>
    <description>The date on which terms will be calculated.</description>
    <inlineHelpText>The date on which terms will be calculated.</inlineHelpText>
    <label>Base Date 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>fferpcore__CreditTermsBaseDate</valueSetName>
    </valueSet>
</CustomField>